--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon",
     "build": "rimraf ./build && tsc",
     "start": "npm run build && node build/index.js"
-    },
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -16,5 +16,8 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "venom-bot": "^4.2.0"
   }
 }
