--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
     "@types/node": "^18.6.2",
     "nodemon": "^2.0.19",
     "rimraf": "^3.0.2",
@@ -18,6 +20,9 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "libphonenumber-js": "^1.10.10",
     "venom-bot": "^4.2.0"
   }
 }
